--- a/nz/index.html
+++ b/nz/index.html
@@ -18,5 +18,40 @@
             </address>
         </nav>
     </header>
+
+    <hr>
+<!-- Zeilenumbruch welcher nicht in der Seite zu sehen ist nur im Visual Studio atl + Z -->
+    <main>
+        <h1>Franz Josef Glacier</h1>
+        <p>Der Franz-Josef-Gletscher (Englisch: Franz Josef Glacier, Māori: Kā Roimata o Hine Hukatere) ist ein etwa 10 km langer Gletscher im Westland-Nationalpark auf der Südinsel Neuseelands. Er befindet sich auf der Westseite der Neuseeländischen Alpen. Wie sein südlicher Nachbar, der Fox-Gletscher, fließt er von seinem flacheren Nährgebiet die steile Westflanke dieses Gebirges hinunter. Er entwässert über den Waiho River in die Tasmansee. 
+        (Quelle <a href="https://de.wikipedia.org/wiki/Franz-Josef-Gletscher">Wikipedia</a>) 
+        </p>
+        <h2>Waiho River</h2>
+        <figure>
+            <img src="images/attraction.jpg" alt="*">
+            <figcaption> Ein Foto des Waiho River <a href="https://pixabay.com/photos/franz-josef-glacier-new-zealand-794943/">&copy;Bild johnno49</a></figcaption>
+        </figure>
+        <p> <!-- Hier nochmal einen Text wie oben --></p>
+
+        <h3>Übersichtskarte</h3>
+        <div id="mp"></div>
+
+        <h3>Links</h3>
+        <ul>
+            <li><a href="https://www.franzjosefglacier.com">Offiziele Seite des Gletschers</a></li>
+            <li><a href="https://www.tripadvisor.at/Attraction_Review-g609170-d258735-Reviews-Franz_Josef_Glacier-Franz_Josef_Westland_National_Park_Te_Wahipounamu_West_Coast_R.html">Tripadvisor</a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+        </ul>
+
+        <hr>
+
+        <footer>
+            <nav>
+                <a href="https://">vorhergehende Etappe</a>
+                <a href="https://elsa-ve.github.io">nächste Etappe</a>
+            </nav>
+        </footer>
+    </main>
 </body>
 </html>
