--- a/nz/index.html
+++ b/nz/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Neuseelandreise - Franz Josef Glacier</title><!-- Titel kackig damit die Seite in Suchanfragen gut dargestellt werden -->
+    <link rel="stylesheet" href="main.css">
+    <script src="main.js"></script>
 </head>
 <body>
     <header>
@@ -34,7 +36,7 @@
         <p> <!-- Hier nochmal einen Text wie oben --></p>
 
         <h3>Übersichtskarte</h3>
-        <div id="mp"></div>
+        <div id="map" data-lat="-43.5" data-lng="170.22" data-title="Franz-Josef-Gletscher"></div>
 
         <h3>Links</h3>
         <ul>
@@ -48,8 +50,8 @@
 
         <footer>
             <nav>
-                <a href="https://">vorhergehende Etappe</a>
-                <a href="https://elsa-ve.github.io">nächste Etappe</a>
+                &lt;&lt;<a href="https://">vorhergehende Etappe</a> |
+                <a href="https://elsa-ve.github.io">nächste Etappe</a>&gt;&gt;
             </nav>
         </footer>
     </main>
