--- a/nz/index.html
+++ b/nz/index.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Neuseelandreise - Franz Josef Glacier</title><!-- Titel kackig damit die Seite in Suchanfragen gut dargestellt werden -->
+    <title>Neuseelandreise - Franz Josef Glacier</title>
+    <!-- Titel kackig damit die Seite in Suchanfragen gut dargestellt werden -->
     <link rel="stylesheet" href="main.css">
     <script src="main.js"></script>
 </head>
+
 <body>
     <header>
-        <img src="images/header.jpg" alt="Blick auf den Franz Josef Glacier"><!---->
+        <img src="images/header.jpg" alt="Blick auf den Franz Josef Glacier">
+        <!---->
         <p><a href="https://pixabay.com/photos/ice-glacier-cold-walk-stone-1565896/">&copy; Bild sharonang</a></p>
         <h1>Neuseelandreise - Franz Josef Glacier</h1>
         <nav>
-            <a href="https://pixabay.com/photos/grafiti-chalk-male-man-staring-2078629/"><img src="images/user.jpg" alt="Grafiti"></a>
+            <a href="https://pixabay.com/photos/grafiti-chalk-male-man-staring-2078629/"><img src="images/user.jpg"
+                    alt="Grafiti"></a>
             <address>
                 <a href="mailto:peter.stampfl@student.uibk.ac.at">Peter Stampfl</a>
                 <a href=""></a>
@@ -22,18 +27,31 @@
     </header>
 
     <hr>
-<!-- Zeilenumbruch welcher nicht in der Seite zu sehen ist nur im Visual Studio atl + Z -->
+    <!-- Zeilenumbruch welcher nicht in der Seite zu sehen ist nur im Visual Studio atl + Z -->
     <main>
         <h1>Franz Josef Glacier</h1>
-        <p>Der Franz-Josef-Gletscher (Englisch: Franz Josef Glacier, Māori: Kā Roimata o Hine Hukatere) ist ein etwa 10 km langer Gletscher im Westland-Nationalpark auf der Südinsel Neuseelands. Er befindet sich auf der Westseite der Neuseeländischen Alpen. Wie sein südlicher Nachbar, der Fox-Gletscher, fließt er von seinem flacheren Nährgebiet die steile Westflanke dieses Gebirges hinunter. Er entwässert über den Waiho River in die Tasmansee. 
-        (Quelle <a href="https://de.wikipedia.org/wiki/Franz-Josef-Gletscher">Wikipedia</a>) 
+        <p>Der Franz-Josef-Gletscher (Englisch: Franz Josef Glacier, Māori: Kā Roimata o Hine Hukatere) ist ein etwa 10
+            km langer Gletscher im Westland-Nationalpark auf der Südinsel Neuseelands. Er befindet sich auf der
+            Westseite der Neuseeländischen Alpen. Wie sein südlicher Nachbar, der Fox-Gletscher, fließt er von seinem
+            flacheren Nährgebiet die steile Westflanke dieses Gebirges hinunter. Er entwässert über den Waiho River in
+            die Tasmansee.
+            (Quelle <a href="https://de.wikipedia.org/wiki/Franz-Josef-Gletscher">Wikipedia</a>)
         </p>
         <h2>Waiho River</h2>
         <figure>
             <img src="images/attraction.jpg" alt="*">
-            <figcaption> Ein Foto des Waiho River <a href="https://pixabay.com/photos/franz-josef-glacier-new-zealand-794943/">&copy;Bild johnno49</a></figcaption>
+            <figcaption> Ein Foto des Waiho River <a
+                    href="https://pixabay.com/photos/franz-josef-glacier-new-zealand-794943/">&copy;Bild johnno49</a>
+            </figcaption>
         </figure>
-        <p> <!-- Hier nochmal einen Text wie oben --></p>
+        <p>The Waiho River (traditionally the Waiau River[1]) is a river of the West Coast Region of New Zealand's South
+            Island. It is fed by the meltwater of the Franz Josef Glacier and skirts the main township of Franz Josef to
+            its south, where its river bed is crossed by SH6 on a long single-lane bridge. Due to changes in rainfall
+            and snow melt, the river's water flow varies greatly. In a severe rain storm on 26 March 2019, the bridge
+            was destroyed after 400 millimetres (16 in) of rain had fallen.[2] The bridge and one abutment was rebuilt,
+            and the road link reopened after 18 days. (Quelle <a href="https://en.wikipedia.org/wiki/Waiho_River">Wikipedia</a>)
+
+        </p>
 
         <h3>Übersichtskarte</h3>
         <div id="map" data-lat="-43.5" data-lng="170.22" data-title="Franz-Josef-Gletscher"></div>
@@ -41,9 +59,11 @@
         <h3>Links</h3>
         <ul>
             <li><a href="https://www.franzjosefglacier.com">Offiziele Seite des Gletschers</a></li>
-            <li><a href="https://www.tripadvisor.at/Attraction_Review-g609170-d258735-Reviews-Franz_Josef_Glacier-Franz_Josef_Westland_National_Park_Te_Wahipounamu_West_Coast_R.html">Tripadvisor</a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
+            <li><a
+                    href="https://www.tripadvisor.at/Attraction_Review-g609170-d258735-Reviews-Franz_Josef_Glacier-Franz_Josef_Westland_National_Park_Te_Wahipounamu_West_Coast_R.html">Tripadvisor</a>
+            </li>
+            <li><a href="https://www.passengeronearth.com/franz-josef-gletscher-legende-ka-roimata-westland-national-park-suedinsel/">Blogartikel des Gletschers</a></li>
+            <li><a href="https://www.newzealand.com/de/franz-josef-glacier/">Reise buchen</a></li>
         </ul>
 
         <hr>
@@ -56,4 +76,5 @@
         </footer>
     </main>
 </body>
+
 </html>
