vorherige/nächste Etappe aktualisiert

--- a/nz/index.html
+++ b/nz/index.html
@@ -70,8 +70,8 @@
 
         <footer>
             <nav>
-                &lt;&lt;<a href="https://">vorhergehende Etappe</a> |
-                <a href="https://elsa-ve.github.io">nächste Etappe</a>&gt;&gt;
+                &lt;&lt;<a href="https://gubbllukas.github.io">vorhergehende Etappe</a> |
+                <a href="https://csaw9279.github.io">nächste Etappe</a>&gt;&gt;
             </nav>
         </footer>
     </main>
