beautify css. file

--- a/nz/index.html
+++ b/nz/index.html
@@ -14,7 +14,7 @@
     <header>
         <img src="images/header.jpg" alt="Blick auf den Franz Josef Glacier">
         <!---->
-        <p><a href="https://pixabay.com/photos/ice-glacier-cold-walk-stone-1565896/">&copy; Bild sharonang</a></p>
+        <p class="white"><a href="https://pixabay.com/photos/ice-glacier-cold-walk-stone-1565896/">&copy; Bild sharonang</a></p>
         <h1>Neuseelandreise - Franz Josef Glacier</h1>
         <nav>
             <a href="https://pixabay.com/photos/grafiti-chalk-male-man-staring-2078629/"><img src="images/user.jpg"
