Bild rund; schwarze links

--- a/nz/index.html
+++ b/nz/index.html
@@ -14,7 +14,8 @@
     <header>
         <img src="images/header.jpg" alt="Blick auf den Franz Josef Glacier">
         <!---->
-        <p class="white"><a href="https://pixabay.com/photos/ice-glacier-cold-walk-stone-1565896/">&copy; Bild sharonang</a></p>
+        <p class="white"><a href="https://pixabay.com/photos/ice-glacier-cold-walk-stone-1565896/">&copy; Bild
+                sharonang</a></p>
         <h1>Neuseelandreise - Franz Josef Glacier</h1>
         <nav>
             <a href="https://pixabay.com/photos/grafiti-chalk-male-man-staring-2078629/"><img src="images/user.jpg"
@@ -49,7 +50,8 @@
             its south, where its river bed is crossed by SH6 on a long single-lane bridge. Due to changes in rainfall
             and snow melt, the river's water flow varies greatly. In a severe rain storm on 26 March 2019, the bridge
             was destroyed after 400 millimetres (16 in) of rain had fallen.[2] The bridge and one abutment was rebuilt,
-            and the road link reopened after 18 days. (Quelle <a href="https://en.wikipedia.org/wiki/Waiho_River">Wikipedia</a>)
+            and the road link reopened after 18 days. (Quelle <a
+                href="https://en.wikipedia.org/wiki/Waiho_River">Wikipedia</a>)
 
         </p>
 
@@ -62,7 +64,9 @@
             <li><a
                     href="https://www.tripadvisor.at/Attraction_Review-g609170-d258735-Reviews-Franz_Josef_Glacier-Franz_Josef_Westland_National_Park_Te_Wahipounamu_West_Coast_R.html">Tripadvisor</a>
             </li>
-            <li><a href="https://www.passengeronearth.com/franz-josef-gletscher-legende-ka-roimata-westland-national-park-suedinsel/">Blogartikel des Gletschers</a></li>
+            <li><a
+                    href="https://www.passengeronearth.com/franz-josef-gletscher-legende-ka-roimata-westland-national-park-suedinsel/">Blogartikel
+                    des Gletschers</a></li>
             <li><a href="https://www.newzealand.com/de/franz-josef-glacier/">Reise buchen</a></li>
         </ul>
 
