--- a/nz/index.html
+++ b/nz/index.html
@@ -36,7 +36,7 @@
             Westseite der Neuseeländischen Alpen. Wie sein südlicher Nachbar, der Fox-Gletscher, fließt er von seinem
             flacheren Nährgebiet die steile Westflanke dieses Gebirges hinunter. Er entwässert über den Waiho River in
             die Tasmansee.
-            (Quelle <a href="https://de.wikipedia.org/wiki/Franz-Josef-Gletscher">Wikipedia</a>)
+            (Quelle:  <a href="https://de.wikipedia.org/wiki/Franz-Josef-Gletscher">Wikipedia</a>)
         </p>
         <h2>Waiho River</h2>
         <figure>
@@ -50,7 +50,7 @@
             its south, where its river bed is crossed by SH6 on a long single-lane bridge. Due to changes in rainfall
             and snow melt, the river's water flow varies greatly. In a severe rain storm on 26 March 2019, the bridge
             was destroyed after 400 millimetres (16 in) of rain had fallen.[2] The bridge and one abutment was rebuilt,
-            and the road link reopened after 18 days. (Quelle <a
+            and the road link reopened after 18 days. (Quelle: <a
                 href="https://en.wikipedia.org/wiki/Waiho_River">Wikipedia</a>)
 
         </p>
