--- a/nz/index.html
+++ b/nz/index.html
@@ -36,7 +36,7 @@
             Westseite der Neuseeländischen Alpen. Wie sein südlicher Nachbar, der Fox-Gletscher, fließt er von seinem
             flacheren Nährgebiet die steile Westflanke dieses Gebirges hinunter. Er entwässert über den Waiho River in
             die Tasmansee.
-            (Quelle:  <a href="https://de.wikipedia.org/wiki/Franz-Josef-Gletscher">Wikipedia</a>)
+            (Quelle: <a href="https://de.wikipedia.org/wiki/Franz-Josef-Gletscher">Wikipedia</a>)
         </p>
         <h2>Waiho River</h2>
         <figure>
@@ -69,16 +69,14 @@
                     des Gletschers</a></li>
             <li><a href="https://www.newzealand.com/de/franz-josef-glacier/">Reise buchen</a></li>
         </ul>
-
-        <hr>
-
-        <footer>
-            <nav>
-                &lt;&lt;<a href="https://gubbllukas.github.io/nz/">vorhergehende Etappe</a> |
-                <a href="https://csaw9279.github.io/nz/">nächste Etappe</a>&gt;&gt;
-            </nav>
-        </footer>
     </main>
+    <hr> <!--horizintaler strich--> 
+    <footer>
+        <nav>
+            &lt;&lt;<a href="https://gubbllukas.github.io/nz/">vorhergehende Etappe</a> |
+            <a href="https://csaw9279.github.io/nz/">nächste Etappe</a>&gt;&gt;
+        </nav>
+    </footer>
 </body>
 
 </html>
