font awesome cdn eingebunden

--- a/nz/index.html
+++ b/nz/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Neuseelandreise - Franz Josef Glacier</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/js/all.min.js"></script>
     <!-- Titel kackig damit die Seite in Suchanfragen gut dargestellt werden -->
     <link rel="stylesheet" href="main.css">
     <script src="main.js"></script>
@@ -73,8 +74,8 @@
     <hr> <!--horizintaler strich--> 
     <footer>
         <nav>
-            &lt;&lt;<a href="https://gubbllukas.github.io/nz/">vorhergehende Etappe</a> |
-            <a href="https://csaw9279.github.io/nz/">nächste Etappe</a>&gt;&gt;
+            &lt;&lt;<a class="back" href="https://gubbllukas.github.io/nz/">vorhergehende Etappe</a> |
+            <a class="next" href="https://csaw9279.github.io/nz/">nächste Etappe</a>&gt;&gt;
         </nav>
     </footer>
 </body>
