--- a/nz/index.html
+++ b/nz/index.html
@@ -22,7 +22,7 @@
             <a href="https://pixabay.com/photos/grafiti-chalk-male-man-staring-2078629/"><img src="images/user.jpg"
                     alt="Grafiti"></a>
             <address>
-                <a href="mailto:peter.stampfl@student.uibk.ac.at">Peter Stampfl</a>
+                <a href="mailto:peter.stampfl@student.uibk.ac.at"><i class="fas fa-envelope"></i> Peter Stampfl</a>
                 <a href=""></a>
             </address>
         </nav>
@@ -42,7 +42,7 @@
         <h2>Waiho River</h2>
         <figure>
             <img src="images/attraction.jpg" alt="*">
-            <figcaption> Ein Foto des Waiho River <a
+            <figcaption><i class="fas fa-camera-retro"></i> Ein Foto des Waiho River <a
                     href="https://pixabay.com/photos/franz-josef-glacier-new-zealand-794943/">&copy;Bild johnno49</a>
             </figcaption>
         </figure>
@@ -74,8 +74,8 @@
     <hr> <!--horizintaler strich--> 
     <footer>
         <nav>
-            &lt;&lt;<a class="back" href="https://gubbllukas.github.io/nz/">vorhergehende Etappe</a> |
-            <a class="next" href="https://csaw9279.github.io/nz/">nächste Etappe</a>&gt;&gt;
+            <a class="back" href="https://gubbllukas.github.io/nz/"><i class="fas fa-arrow-left"></i> vorhergehende Etappe</a>
+            <a class="next" href="https://csaw9279.github.io/nz/">nächste Etappe <i class="fas fa-arrow-right"></i></a>
         </nav>
     </footer>
 </body>
