--- a/nz/index.html
+++ b/nz/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Neuseelandreise - Franz Josef Glacier</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/js/all.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Baloo+2|Liu+Jian+Mao+Cao&display=swap" rel="stylesheet">
     <!-- Titel kackig damit die Seite in Suchanfragen gut dargestellt werden -->
     <link rel="stylesheet" href="main.css">
     <script src="main.js"></script>
