--- a/nz/index.html
+++ b/nz/index.html
@@ -7,6 +7,7 @@
     <title>Neuseelandreise - Franz Josef Glacier</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/js/all.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Baloo+2|Liu+Jian+Mao+Cao&display=swap" rel="stylesheet">
+    <!-- web fonts vorteil dass sie nicht installiert sein müssen da sie direkt aus dem web geladen werden-->
     <!-- Titel kackig damit die Seite in Suchanfragen gut dargestellt werden -->
     <link rel="stylesheet" href="main.css">
     <script src="main.js"></script>
@@ -14,7 +15,7 @@
 
 <body>
     <header>
-        <img src="images/header.jpg" alt="Blick auf den Franz Josef Glacier">
+        <img class="banner" src="images/header.jpg" alt="Blick auf den Franz Josef Glacier">
         <!---->
         <p class="white"><a href="https://pixabay.com/photos/ice-glacier-cold-walk-stone-1565896/">&copy; Bild
                 sharonang</a></p>
