--- a/nz/index.html
+++ b/nz/index.html
@@ -73,10 +73,12 @@
             <li><a href="https://www.newzealand.com/de/franz-josef-glacier/">Reise buchen</a></li>
         </ul>
     </main>
-    <hr> <!--horizintaler strich--> 
+    <hr>
+    <!--horizintaler strich-->
     <footer>
         <nav>
-            <a class="back" href="https://gubbllukas.github.io/nz/"><i class="fas fa-arrow-left"></i> vorhergehende Etappe</a>
+            <a class="back" href="https://gubbllukas.github.io/nz/"><i class="fas fa-arrow-left"></i> vorhergehende
+                Etappe</a>
             <a class="next" href="https://csaw9279.github.io/nz/">nächste Etappe <i class="fas fa-arrow-right"></i></a>
         </nav>
     </footer>
