--- a/javascript/index.html
+++ b/javascript/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript 101</title>
     <script src="hello.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <h1>Javascript 101</h1>
+    <p id="pFirst">Erster Absatz</p>
+    <p class="indent">weiter Absätze</p>
+    <p class="indent">weiter Absätze</p>
+    <p class="indent">weiter Absätze</p>
+    <p class="indent">weiter Absätze</p>
 </body>
+
 </html>
