--- a/nz/index.html
+++ b/nz/index.html
@@ -32,7 +32,7 @@
                     alt="Grafiti"></a>
             <address>
                 <a href="mailto:peter.stampfl@student.uibk.ac.at"><i class="fas fa-envelope"></i> Peter Stampfl</a>
-                <a href=""></a>
+                <a href="https://github.com/piet93/piet93.github.io">github</a>
             </address>
         </nav>
     </header>
@@ -84,9 +84,8 @@
     <!--horizintaler strich-->
     <footer>
         <nav>
-            <a class="back" href="https://gubbllukas.github.io/nz/"><i class="fas fa-arrow-left"></i> vorhergehende
-                Etappe</a>
-            <a class="next" href="https://csaw9279.github.io/nz/">nächste Etappe <i class="fas fa-arrow-right"></i></a>
+            <a class="back" href="https://gubbllukas.github.io/nz/"><i class="fas fa-arrow-left"></i> Haast</a>
+            <a class="next" href="https://csaw9279.github.io/nz/">Pancake rocks <i class="fas fa-arrow-right"></i></a>
         </nav>
     </footer>
 </body>
