--- a/nz/index.html
+++ b/nz/index.html
@@ -10,15 +10,17 @@
     <!-- web fonts vorteil dass sie nicht installiert sein müssen da sie direkt aus dem web geladen werden-->
     <!-- Titel kackig damit die Seite in Suchanfragen gut dargestellt werden -->
     <link rel="stylesheet" href="main.css">
-    <script src="main.js"></script>
 
-    <!--Leaflet-->
+
+    <!--Einbinden von Leaflet CSS File:-->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
         integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
         crossorigin="" />
     <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
         integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
         crossorigin=""></script>
+
+    <script src="main.js"></script>
 </head>
 
 <body>
