--- a/nz/index.html
+++ b/nz/index.html
@@ -34,8 +34,8 @@
             <a href="https://pixabay.com/photos/grafiti-chalk-male-man-staring-2078629/"><img src="images/user.jpg"
                     alt="Grafiti"></a>
             <address>
-                <a href="mailto:peter.stampfl@student.uibk.ac.at"><i class="fas fa-envelope"></i> Peter Stampfl</a>
-                <a href="https://github.com/piet93/piet93.github.io">github</a>
+                <a href="mailto:peter.stampfl@student.uibk.ac.at"><i class="fas fa-envelope"></i> Peter Stampfl </a>
+                <a href="https://github.com/piet93/piet93.github.io"><i class="fab fa-github"></i> github</a>
             </address>
         </nav>
     </header>
