--- a/nz/index.html
+++ b/nz/index.html
@@ -20,7 +20,7 @@
         integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
         crossorigin=""></script>
 
-    <script src="main.js"></script>
+    <script defer src="main.js"></script>
 </head>
 
 <body>
@@ -69,7 +69,7 @@
         </p>
 
         <h3>Übersichtskarte</h3>
-        <div id="map" data-lat="-43.880833" data-lng="169.040278" data-title="Franz-Josef-Gletscher"></div>
+        <div id="map" data-lat="-43.5" data-lng="170.22" data-title="Franz-Josef-Gletscher"></div>
 
         <h3>Links</h3>
         <ul>
