--- a/world/index.html
+++ b/world/index.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weltkarte</title>
+    <title>COVID-19 Verbreitung</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
 
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
@@ -17,7 +20,19 @@
 </head>
 
 <body>
-    <div id="map"></div>
+    <header>
+        <h2><i class="fas fa-map-marked"></i> COVID-19 Verbreitung</h2>
+        <nav>
+            <p>
+                <i class="fab fa-github"></i> <a href="https://github.com/webmapping/webmapping.github.io/tree/master/world">Source</a> |
+                <i class="fas fa-download"></i> <a href="https://github.com/CSSEGISandData/COVID-19">COVID-Data</a>
+            </p>
+        </nav>
+    </header>
+
+    <main>
+        <div id="map"></div>
+    </main>
 </body>
 
 </html>
