--- a/world/index.html
+++ b/world/index.html
@@ -21,7 +21,7 @@
 
 <body>
     <header>
-        <h2><i class="fas fa-map-marked"></i> COVID-19 Verbreitung</h2>
+        <h2><i class="fas fa-map-marked"></i> COVID-19 Verbreitung <span id="datum"></span></h2>
         <nav>
             <p>
                 <i class="fab fa-github"></i> <a href="https://github.com/webmapping/webmapping.github.io/tree/master/world">Source</a> |
@@ -32,6 +32,12 @@
 
     <main>
         <div id="map"></div>
+        <select id="pulldown">
+            <option value="confirmed">bestätigte Fälle</option>
+            <option value="deaths">Verstorbene</option>
+            <option value="recovery" selected>Genesene</option>
+
+        </select>
     </main>
 </body>
 
