--- a/world/index.html
+++ b/world/index.html
@@ -32,7 +32,7 @@
 
     <main>
         <div id="map"></div>
-        <input type="range" id="slider">
+        <input type="range" id="slider" min="" max="">
         <select id="pulldown">
             <option value="confirmed">bestätigte Fälle</option>
             <option value="deaths">Verstorbene</option>
