--- a/world/index.html
+++ b/world/index.html
@@ -39,6 +39,7 @@
             <option value="recovery" selected>Genesene</option>
 
         </select>
+        <input id="play" type="button" value="Animation">
     </main>
 </body>
 
