--- a/world/index.html
+++ b/world/index.html
@@ -39,7 +39,7 @@
             <option value="recovery" selected>Genesene</option>
 
         </select>
-        <input id="play" type="button" value="Animation">
+        <input id="play" type="button" value="▶️">
     </main>
 </body>
 
