--- a/world/index.html
+++ b/world/index.html
@@ -24,7 +24,8 @@
         <h2><i class="fas fa-map-marked"></i> COVID-19 Verbreitung <span id="datum"></span></h2>
         <nav>
             <p>
-                <i class="fab fa-github"></i> <a href="https://github.com/webmapping/webmapping.github.io/tree/master/world">Source</a> |
+                <i class="fab fa-github"></i> <a
+                    href="https://github.com/webmapping/webmapping.github.io/tree/master/world">Source</a> |
                 <i class="fas fa-download"></i> <a href="https://github.com/CSSEGISandData/COVID-19">COVID-Data</a>
             </p>
         </nav>
