--- a/adlerweg/index.html
+++ b/adlerweg/index.html
@@ -41,8 +41,8 @@
         <h5>Höhenmeter Bergauf: <span id="et-auf"></span> | Höhenmeter Bergab: <span id="et-ab">|</span> | Höchster Punkt: <span id="et-Hp">|</span></h5>
         <select id="pulldown"></select>
         <div id="map"></div>
-        
         <p id="et-info"></p>
+        <h4>Einkehrmöglichkeiten: <span id="et-einkehr"></span></h4>
     </main>
 
 </body>
