--- a/adlerweg/index.html
+++ b/adlerweg/index.html
@@ -43,7 +43,7 @@
         <div id="map"></div>
         <p id="et-info"></p>
         <h4>Einkehrmöglichkeiten: <span id="et-einkehr"></span></h4>
-        <h4>Etappe herunterladen (.gpx)</h4>
+        <h4><a href="gpx/AdlerwegEtappe01.gpx">Etappe herunterladen (.gpx)</a></h4>
     </main>
 
 </body>
